updated all html or css

--- a/index.html
+++ b/index.html
@@ -768,18 +768,18 @@
 
 
     <!-- updated -->
-    <section class="main-container">
-        <!-- MAIN TITLE -->
+    <!-- <section class="main-container">
+        MAIN TITLE
         <h1 class="section-title main-title">
             My <span>Skills</span>
         </h1>
         <div class="skills-container">
-            <!-- Technical Skills -->
+            Technical Skills
             <div class="skills-column">
                 <h2 class="section-title column-title">
                     Technical <span>Skills</span>
                 </h2>
-                <!-- HTML -->
+                HTML
                 <div class="skills-list">
                     <div class="skill-item">
                         <div class="skill-header">
@@ -793,7 +793,7 @@
                             <span class="progress-percent">95%</span>
                         </div>
                     </div>
-                    <!-- CSS -->
+                    CSS
                     <div class="skill-item">
                         <div class="skill-header">
                             <i class='bx bxl-css3'></i>
@@ -806,7 +806,7 @@
                             <span class="progress-percent">95%</span>
                         </div>
                     </div>
-                    <!-- JavaScript -->
+                    JavaScript
                     <div class="skill-item">
                         <div class="skill-header">
                             <i class='bx bxl-javascript'></i>
@@ -819,7 +819,7 @@
                             <span class="progress-percent">85%</span>
                         </div>
                     </div>
-                    <!-- Python -->
+                    Python
                     <div class="skill-item">
                         <div class="skill-header">
                             <i class='bx bxl-python'></i>
@@ -832,7 +832,7 @@
                             <span class="progress-percent">85%</span>
                         </div>
                     </div>
-                    <!-- React -->
+                    React
                     <div class="skill-item">
                         <div class="skill-header">
                             <i class='bx bxl-react'></i>
@@ -845,7 +845,7 @@
                             <span class="progress-percent">65%</span>
                         </div>
                     </div>
-                    <!-- PHP -->
+                    PHP
                     <div class="skill-item">
                         <div class="skill-header">
                             <i class='bx bxl-php'></i>
@@ -859,15 +859,15 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Professional Skills -->
-            <div class="skills-column">
+            <!-- <div class="skills-column">
                 <h2 class="section-title column-title">
                     Professional <span>Skills</span>
                 </h2>
                 <div class="radial-skills-grid">
-                    <!-- Creativity -->
+                    Creativity
                     <div class="radial-skill">
                         <div class="radial-container">
                             <svg viewBox="0 0 100 100">
@@ -878,7 +878,7 @@
                         </div>
                         <div class="radial-label">Creativity</div>
                     </div>
-                    <!-- Communication -->
+                    Communication
                     <div class="radial-skill">
                         <div class="radial-container">
                             <svg viewBox="0 0 100 100">
@@ -889,7 +889,7 @@
                         </div>
                         <div class="radial-label">Communication</div>
                     </div>
-                    <!-- Problem Solving -->
+                    Problem Solving
                     <div class="radial-skill">
                         <div class="radial-container">
                             <svg viewBox="0 0 100 100">
@@ -900,7 +900,7 @@
                         </div>
                         <div class="radial-label">Problem Solving</div>
                     </div>
-                    <!-- Teamwork -->
+                    Teamwork
                     <div class="radial-skill">
                         <div class="radial-container">
                             <svg viewBox="0 0 100 100">
@@ -914,8 +914,161 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
+<section class="main-container">
+    <h1 class="section-title main-title">
+        My <span>Skills</span>
+    </h1>
+
+    <div class="skills-container">
+
+        <!-- Technical Skills -->
+        <div class="skills-column">
+            <h2 class="section-title column-title">
+                Technical <span>Skills</span>
+            </h2>
+
+            <div class="skills-list">
+
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <i class='bx bxl-html5'></i>
+                        <span class="skill-name">HTML</span>
+                    </div>
+                    <div class="progress-container">
+                        <div class="progress-bar">
+                            <div class="progress-fill" style="--level:95%"></div>
+                        </div>
+                        <span class="progress-percent">95%</span>
+                    </div>
+                </div>
+
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <i class='bx bxl-css3'></i>
+                        <span class="skill-name">CSS</span>
+                    </div>
+                    <div class="progress-container">
+                        <div class="progress-bar">
+                            <div class="progress-fill" style="--level:95%"></div>
+                        </div>
+                        <span class="progress-percent">95%</span>
+                    </div>
+                </div>
+
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <i class='bx bxl-javascript'></i>
+                        <span class="skill-name">JavaScript</span>
+                    </div>
+                    <div class="progress-container">
+                        <div class="progress-bar">
+                            <div class="progress-fill" style="--level:85%"></div>
+                        </div>
+                        <span class="progress-percent">85%</span>
+                    </div>
+                </div>
+
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <i class='bx bxl-python'></i>
+                        <span class="skill-name">Python</span>
+                    </div>
+                    <div class="progress-container">
+                        <div class="progress-bar">
+                            <div class="progress-fill" style="--level:85%"></div>
+                        </div>
+                        <span class="progress-percent">85%</span>
+                    </div>
+                </div>
+
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <i class='bx bxl-react'></i>
+                        <span class="skill-name">React</span>
+                    </div>
+                    <div class="progress-container">
+                        <div class="progress-bar">
+                            <div class="progress-fill" style="--level:65%"></div>
+                        </div>
+                        <span class="progress-percent">65%</span>
+                    </div>
+                </div>
+
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <i class='bx bxl-php'></i>
+                        <span class="skill-name">PHP</span>
+                    </div>
+                    <div class="progress-container">
+                        <div class="progress-bar">
+                            <div class="progress-fill" style="--level:75%"></div>
+                        </div>
+                        <span class="progress-percent">75%</span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Professional Skills -->
+        <div class="skills-column">
+            <h2 class="section-title column-title">
+                Professional <span>Skills</span>
+            </h2>
+
+            <div class="radial-skills-grid">
+
+                <div class="radial-skill">
+                    <div class="radial-container">
+                        <svg viewBox="0 0 100 100">
+                            <circle cx="50" cy="50" r="45" class="radial-bg"></circle>
+                            <circle cx="50" cy="50" r="45" class="radial-progress r1"></circle>
+                        </svg>
+                        <div class="radial-percent">80%</div>
+                    </div>
+                    <div class="radial-label">Creativity</div>
+                </div>
+
+                <div class="radial-skill">
+                    <div class="radial-container">
+                        <svg viewBox="0 0 100 100">
+                            <circle cx="50" cy="50" r="45" class="radial-bg"></circle>
+                            <circle cx="50" cy="50" r="45" class="radial-progress r2"></circle>
+                        </svg>
+                        <div class="radial-percent">75%</div>
+                    </div>
+                    <div class="radial-label">Communication</div>
+                </div>
+
+                <div class="radial-skill">
+                    <div class="radial-container">
+                        <svg viewBox="0 0 100 100">
+                            <circle cx="50" cy="50" r="45" class="radial-bg"></circle>
+                            <circle cx="50" cy="50" r="45" class="radial-progress r3"></circle>
+                        </svg>
+                        <div class="radial-percent">85%</div>
+                    </div>
+                    <div class="radial-label">Problem Solving</div>
+                </div>
+
+                <div class="radial-skill">
+                    <div class="radial-container">
+                        <svg viewBox="0 0 100 100">
+                            <circle cx="50" cy="50" r="45" class="radial-bg"></circle>
+                            <circle cx="50" cy="50" r="45" class="radial-progress r4"></circle>
+                        </svg>
+                        <div class="radial-percent">75%</div>
+                    </div>
+                    <div class="radial-label">Teamwork</div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+</section>
 
 
 
