added the updated code

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <!-- Header Section Part Start -->
-    <header class="header">
+    <!-- <header class="header">
         <a href="#" class="logo">
             Portfolio
         </a>
@@ -34,7 +34,20 @@
             <a href="#Skills" style="--i:4">Portfolio</a>
             <a href="#contact" style="--i:5">Contact</a>
         </nav>
+    </header> -->
+
+    <header class="header">
+        <a href="#" class="logo">Portfolio</a>
+        <div id="menu-icon" class='bx bx-menu'></div>
+        <nav class="navbar">
+            <a href="#home" style="--i:1" class="active">Home</a>
+            <a href="#about" style="--i:2">About</a>
+            <a href="#services" style="--i:3">Skills</a>
+            <a href="#Skills" style="--i:4">Portfolio</a>
+            <a href="#contact" style="--i:5">Contact</a>
+        </nav>
     </header>
+
     <!-- Header Section Part End -->
 
     <!-- Home Section Part Start -->
@@ -518,7 +531,7 @@
     <!-- JavaScript Files -->
     <script src="script/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    
+
 </body>
 
 </html>
