updated all code

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                 <!-- Honeypot for spam protection -->
                 <input type="text" name="_gotcha" style="display:none">
                 <!-- <input type="submit" value="Submit" class="send" id="submitBtn"> -->
-                <input type="submit" value="Send Messages" class="send" id="submitBtn">
+                <input type="submit" value="Submit" class="send" id="submitBtn">
             </form>
         </div>
     </section>
@@ -519,6 +519,7 @@
     <script src="script/main.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     
+   
 </body>
 
 </html>
